# Benchmarker

./: .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  LICENSE  gcc-arm-none-eabi.cmake
.devcontainer/: devcontainer.json
boards/NUCLEO_F411/: board.cmake
docker/: Dockerfile
fuze-build/: benchmarker-fuze-demo.json
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/boards/: CMakeLists.txt  board.h
src/boards/ek-ra6m5/: CMakeLists.txt
src/boards/ek-ra6m5/ra6m5/: _bsp_cfg.h  fsp.ld  vector_data.h
src/boards/ek-ra6m5/ra6m5/__inc/: fsp_features.h
src/boards/ek-ra6m5/ra6m5/__src/bsp/mcu/all/: bsp_common.h
src/boards/ek-ra6m5/ra6m5/fsp/inc/instances/: rm_stdio_littlefs.h
src/boards/ek-ra6m5/ra6m5/fsp_cfg/: r_cgc_cfg.h  r_ether_cfg.h  r_ether_phy_cfg.h  r_flash_hp_cfg.h  r_gpt_cfg.h  r_usb_basic_cfg.h  rm_littlefs_flash_cfg.h
src/boards/ek-ra6m5/ra6m5/fsp_cfg/bsp/: board_cfg.h  bsp_cfg.h  bsp_mcu_family_cfg.h
src/boards/ek-ra6m5/ra6m5/fsp_cfg/middleware/: rm_freertos_plus_fat_cfg.h
src/boards/ek-ra6m5/ra6m5/ra_gen/: bsp_clock_cfg.h  common_data.h  pin_data.c  vector_data.c  vector_data.h
src/boards/nrf52840-dk/: CMakeLists.txt
src/boards/nrf52840-dk/nrf52840/: nrf_common.ld
src/boards/nrf54l15-dk/: CMakeLists.txt  nrf54l15-dk-bsp.cpp  start.c
src/boards/nrf54l15-dk/nrf54l15/: nrf54_xxaa.ld  nrf_common.ld  startup_nrf54l.c
src/boards/nucleo-f411/: CMakeLists.txt  STM32F411RETx_FLASH.ld  stm32-f411-bsp.cpp
src/boards/nucleo-f411/STM32F4xx/: bsp.h  stm32f4xx_hal_conf.h  stm32f4xx_hal_msp.c  stm32f4xx_it.c
src/boards/nucleo-u575/: CMakeLists.txt
src/boards/nucleo-u575/STM32U575/: bsp.h  stm32u5xx_hal_msp.c  stm32u5xx_it.c  stm32u5xx_it.h
src/boards/stm32f3discovery/: CMakeLists.txt
src/boards/stm32f3discovery/STM32F3xx/: bsp.h  stm32f3xx_hal_msp.c  stm32f3xx_it.c
src/drivers/: CMakeLists.txt
src/tests/: CMakeLists.txt  meas_cyccnt_start.s  meas_cyccnt_start_128_aligned.s  meas_cyccnt_stop.s  rcs_bl_0.s  rcs_bl_dummy_100.s  rcs_bl_dummy_2.s  rcs_bl_nop_2.s  rcs_dummy_10.s  rcs_dummy_100.s  rcs_dummy_2.s  rcs_dummy_5000.s  rcs_ldr_1000.s  rcs_ldr_5000.s  rcs_loop.s  rcs_raw_dummy.txt  rcs_raw_nop.txt  rcs_str_2.s  rcs_str_5000.s  test_cyccnt128_loop.s  test_cyccnt128_loop_aligned_0.s  test_cyccnt128_loop_aligned_2.s  test_cyccnt128_loop_aligned_4.s  test_cyccnt128_loop_aligned_6.s  test_cyccnt128_loop_aligned_8.s  test_cyccnt128_loop_aligned_A.s  test_cyccnt128_loop_aligned_C.s  test_cyccnt128_loop_aligned_E.s  test_cyccnt_bl_0.s  test_cyccnt_bl_dummy_2.s  test_cyccnt_bl_nop_2.s  test_cyccnt_dummy_2.s  test_cyccnt_dummy_5000.s  test_cyccnt_loop.s  test_cyccnt_loop_aligned_0.s  test_cyccnt_loop_aligned_2.s  test_cyccnt_loop_aligned_4.s  test_cyccnt_loop_aligned_6.s  test_cyccnt_loop_aligned_8.s  test_cyccnt_loop_aligned_A.s  (+18 more)
